# exemples-cours

./: .gitignore  LICENSE  README.md  installation-ubuntu.sh  prix_bretagne.csv  requirements.txt
analyse-dynamique/doctest/: README.md  pyproject.toml
analyse-dynamique/doctest/samples/: fichier_exemple.txt
analyse-dynamique/doctest/src/: custom_types.py
analyse-dynamique/doctest/src/model/: compteur.py
analyse-dynamique/exemples_pytest/: README.md  pyproject.toml
analyse-dynamique/exemples_pytest/src/dao/: lecture_fichier_dao.py
analyse-dynamique/exemples_pytest/src/model/: compteur.py
analyse-dynamique/exemples_pytest/src/view/: compteur_view.py
analyse-dynamique/exemples_pytest/tests/dao/: lecture_fichier_dao_test.py
analyse-dynamique/exemples_pytest/tests/model/: compteur_test.py
analyse-dynamique/exemples_pytest/tests/service/: compteur_service_test.py
analyse-dynamique/pytest/: README.md  pyproject.toml
analyse-dynamique/pytest/src/: main.py
analyse-dynamique/pytest/src/dao/: lecture_fichier_dao.py
analyse-dynamique/pytest/src/service/: compteur_service.py
analyse-dynamique/pytest/src/view/: compteur_view.py
architecture-applicative/: README.md
configuration/tp/: README.md  (+3 more)
cours-1/: README.md
cours-2/: README.md  requirements.txt
cours-3/: README.md
etats-persistence-donnees/: README.md
frontend-react-js/: README.md
webscrapping/: main.py  pyproject.toml  recuperation_donnees_avec_regex.py  recuperation_donnees_avec_str.py  utilisation_basique_beautifulsoup4.py  utilisation_basique_regex.py  utilisation_basique_request.py
(+295 files in other folders)
