[project]
name = "pytest"
version = "0.1.0"
description = "Projet exemple utilisant pytest - compteur d'occurence de lettre dans un fichier"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.uv.sources]
pytest = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
